--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.8.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
 
         <dependency>
             <groupId>com.dharma</groupId>
@@ -82,6 +87,7 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.2.5.RELEASE</version>
         </dependency>
+
 
     </dependencies>
 
@@ -124,12 +130,15 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>1.0.2</version>
                 <configuration>
+                    <allowInsecureRegistries>true</allowInsecureRegistries>
+
                     <to>
-                        <image>rowanf/orders</image>
-                        <auth>
-                            <username>rowanf</username>
-                            <password>rowm0ng1</password>
-                        </auth>
+                        <image>192.168.68.10:5000/rowanf/orders:1</image>
+                        <!--                        <image>rowanf/orders</image>-->
+                        <!--                        <auth>-->
+                        <!--                            <username>rowanf</username>-->
+                        <!--                            <password>rowm0ng1</password>-->
+                        <!--                        </auth>-->
                     </to>
                 </configuration>
             </plugin>
